# ConcurrentDataSharer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
cmake/: CMakeLists.txt  Makefile  cmake_install.cmake
doc/: CMakeLists.txt  Doxyfile
doc/docbook/: BlockingQueue_8cpp.xml  BlockingQueue_8cpp__dep__incl.md5  BlockingQueue_8cpp__incl.md5  BlockingQueue_8h.xml  BlockingQueue_8h__dep__incl.md5  BlockingQueue_8h__incl.md5  CMakeCache_8txt.xml  CMakeCache_8txt__incl.md5  CMakeFiles_23_85_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp.xml  CMakeFiles_23_85_81_2CompilerIdCXX_2CMakeCXXCompilerId_8cpp__incl.md5  CMakeFiles_23_85_81_2CompilerIdC_2CMakeCCompilerId_8c.xml  CMakeFiles_23_85_81_2CompilerIdC_2CMakeCCompilerId_8c__incl.md5  CMakeFiles_2TargetDirectories_8txt.xml  CMakeFiles_2TargetDirectories_8txt__dep__incl.md5  CMakeFiles_2feature__tests_8c.xml  CMakeFiles_2feature__tests_8c__incl.md5  CMakeFiles_2feature__tests_8cxx.xml  CMakeFiles_2feature__tests_8cxx__dep__incl.md5  CMakeLists_8txt.xml  CMakeLists_8txt__incl.md5  CMakeRuleHashes_8txt.xml  CMakeRuleHashes_8txt__incl.md5  README_8md.xml  README_8md__incl.md5  _2main_8cpp.xml  _2main_8cpp__dep__incl.md5  _2main_8cpp__incl.md5  classBlockingQueue.xml  classBlockingQueue__inherit__graph.md5  classConcurrentDataSharer.xml  classConcurrentDataSharer__coll__graph.md5  classDataBaseElement.xml  classDataBaseElement__coll__graph.md5  classQueueElementBase.xml  classQueueElementBase__coll__graph.md5  classQueueElementBase__inherit__graph.md5  classQueueElementCallback.xml  classQueueElementGet.xml  classQueueElementMultiSend.xml  classQueueElementMultiSend__inherit__graph.md5  (+113 more)
doc/html/: BlockingQueue_8h_source.html  annotated.html  classBlockingQueue-members.html  classBlockingQueue.html  classConcurrentDataSharer-members.html  classConcurrentDataSharer.html  classDataBaseElement-members.html  classDataBaseElement.html  classQueueElementBase-members.html  classQueueElementBase.html  classQueueElementBase__inherit__graph.map  classQueueElementCallback-members.html  classQueueElementCallback.html  classQueueElementCallback__coll__graph.md5  classQueueElementCallback__inherit__graph.map  classQueueElementGet-members.html  classQueueElementGet.html  classQueueElementGet__coll__graph.map  classQueueElementGet__inherit__graph.md5  classQueueElementMultiSend-members.html  classQueueElementMultiSend.html  classQueueElementMultiSend__inherit__graph.map  classQueueElementSet-members.html  classQueueElementSet.html  classQueueElementSet__coll__graph.map  classQueueElementTCPSend-members.html  classQueueElementTCPSend.html  classQueueElementTCPSend__coll__graph.md5  classQueueElementTCPSend__inherit__graph.map  classclientData-members.html  classclientData.html  classes.html  concurrentdatasharer_8h_source.html  concurrentdatasharer__python_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_2279ec034eb197bd8bf8ccbe0895286f.html  dir_33c4867c58fb9a755f48181356071b68.html  dir_34e32b2767b9a66498b8d81e5df7818f.html  dir_3c5bba4a0a02067e35ccbcc34916118f.html  (+36 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  pages_0.js  searchdata.js
doc/latex/: annotated.tex  classBlockingQueue.tex  classConcurrentDataSharer.tex  classDataBaseElement.tex  classQueueElementBase.tex  classQueueElementBase__inherit__graph.md5  classQueueElementCallback.tex  classQueueElementCallback__inherit__graph.md5  classQueueElementGet.tex  classQueueElementGet__inherit__graph.md5  classQueueElementMultiSend.tex  classQueueElementMultiSend__coll__graph.md5  classQueueElementSet.tex  classQueueElementSet__coll__graph.md5  classQueueElementTCPSend.tex  classQueueElementTCPSend__inherit__graph.md5  classclientData.tex  dir_017ad5e908c41501f6a06b5119b37293.tex  dir_13e138d54eb8818da29c3992edef070a.tex  dir_2279ec034eb197bd8bf8ccbe0895286f.tex  dir_33c4867c58fb9a755f48181356071b68.tex  dir_34e32b2767b9a66498b8d81e5df7818f.tex  dir_3c5bba4a0a02067e35ccbcc34916118f.tex  dir_429f7ad8260db40d0cb30f4899c76371.tex  dir_45e41c1c577a7a51c7abfbf9de7c2218.tex  dir_5925f622c45765ab58dfa342285cc499.tex  dir_60d60925df49deb12670344267973237.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_7deeaf3993b6be5d84d1517da7be2d47.tex  dir_a2ff7838e19bfc42e2fa0dbd30041a0b.tex  dir_b0becaad102e215b679f93b57a3b0c18.tex  dir_cd3db5597f2261188045d3f032b6e500.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  dir_dec13c9416df15bd5a92c365c23769ba.tex  dir_fc57c17107d9cc94f8b7d2ea70140699.tex  group__somewhere.tex  hierarchy.tex  md__home_martin_repositories_ConcurrentDataSharer_README.tex  refman.aux  refman.idx  (+5 more)
examples/python/: sub.py  test.py
include/: BlockingQueue.h  concurrentdatasharer.h  concurrentdatasharer_python.h  constants.h  structures.h
src/: BlockingQueue.cpp  concurrentdatasharer.cpp  structures.cpp
test/: CMakeLists.txt  Makefile  cmake_install.cmake
test/clienttest/: CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
test/clienttest1/: CMakeLists.txt  main.cpp
test/pythontest/: CMakeLists.txt  concurrentdatasharer_python.cpp  concurrentdatasharer_python.h  sub.py  test.py  test1.py
test/subtest/: CMakeLists.txt  main.cpp
