cmake_minimum_required (VERSION 3.5.1)
project (clienttest)
set ( PROJECT_LINK_LIBS ConcurrentDataSharer.so )
link_directories( ${CMAKE_CURRENT_SOURCE_DIR}/../../lib )
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../include)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../bin)
set (CMAKE_CXX_FLAGS "-std=c++11")
add_executable(main main.cpp)
target_link_libraries(main ${PROJECT_LINK_LIBS} -lboost_serialization  -lboost_thread -lboost_system  )
